<resources>
    <string name="app_name" translatable="false">Stationeers Pad</string>
    <string name="opis_rudy_miedzi">Rudę miedzi można wydobyć na całej powierzchni Księżyca za pomocą Wiertła Górniczego oraz niekturych asteroid. Ruda miedzi może zostać przekształcona w sztabkę miedzianą poprzez wytapianie jej w piecu łukowym lub piecu. Rudę miedzi można również łączyć z równą ilością rudy niklu w piecu, aby utworzyć sztabki Constantan (brak tłumaczenia Mosiądz jak sądze).</string>
    <string name="zastosowanie_ruda_miedzi">Używane w: 1.piecu 2 piecu łukowym.</string>
    <string name="opis_rudy_krzemu">Rudę Krzemu wydobywa się na całej powierzchni Księżyca za pomocą Wiertła Górniczego.</string>
    <string name="zastosowanie_rudy_krzemu">Przetworzoną Rudę Krzemową można przekształcić w Kruszcową Wlewkę za pomocą łukowego pieca lub pieca. Wytapianie jednej rudy krzemu daje następujące gazy:</string>
    <string name="ruda_krzemu_1">1 mol Zanieczyszczenie</string>
    <string name="ruda_krzemu_2">1 mol azotu</string>
    <string name="ruda_krzemu_3">1 mol Dwutlenek węgla</string>
    <string name="opis_rudy_niklu">Ruda nikielu jest wydobywana na całej powierzchni Księżyca za pomocą Wiertła górniczego.</string>
    <string name="zastosowanie_rudy_niklu">Rudę niklu można przekształcić w sztabkię niklu poprzez wytopienie go w Piecu lub Piecu łukowym.Rudę możesz wykorzystać do wytworzenia sztabki Constantan łoncząc ja z miedzią w stosunku 1:1 w Piecu.</string>
    <string name="efekty_rudy_niklu">Wytapianie jednej rudy niklu wytwarza następujące gazy:</string>
    <string name="efekty_rudy_niklu_1">1 mol Zanieczyszczenie</string>
    <string name="efekty_rudy_niklu_2">1 mol Dwutlenek węgla</string>
    <string name="efekty_rudy_niklu_3">0,5 mol azotu</string>
    <string name="opis_rudy_olowiu">Ruda ołowiu jest wydobywana na całej powierzchni Księżyca za pomocą Wiertła górniczego.</string>
    <string name="zastosowanie_rudy_olowiu">Ruda ołowiu może zostać przetopiona w sztabki ołowiu, umieszczając ją w Piecu Łukowym lub Piecu. Można go również łączyć z równymi ilościami rudy żelaza w piecu, aby utworzyć wlewki lutownicze.</string>
    <string name="efekty_rudy_olowiu">Wytapianie jednej rudy ołowiu wytwarza następujące gazy:</string>
    <string name="efekty_rudy_olowiu_1">2 mol Zanieczyszczenie</string>
    <string name="efekty_rudy_olowiu_2">1 mol azotu</string>
    <string name="efekty_rudy_olowiu_3">0,1 mol Dwutlenek węgla</string>
    <string name="efekty_rudy_olowiu_4">0,1 mol tlenu</string>
    <string name="opis_rudy_srebra">Ruda Srebra jest wydobywana na całej powierzchni Księżyca za pomocą Wiertła Górniczego.</string>
    <string name="zastosowanie_rudy_srebra">Można go przekształcić w srebrną sztabkę poprzez wytapianie go w piecu lub w piecu łukowym. Rudy srebra można łączyć z równymi ilościami rudy złota w piecu, aby utworzyć sztabkę Electrum.</string>
    <string name="efekt_rudy_srebra">Wytapianie jednej rudy srebra wytwarza następujące gazy:</string>
    <string name="efekt_rudy_srebra_1">1 mol Zanieczyszczenie</string>
    <string name="efekt_rudy_srebra_2">1 mol Dwutlenek węgla</string>
    <string name="efekt_rudy_srebra_3">0,4 mol azotu</string>
    <string name="opis_rudy_uranu">Ruda uranu wydobywana jest na całej powierzchni Księżyca za pomocą wiertni górniczej.</string>
    <string name="zastosowanie_rudy_uranu">Obecnie wydaje się, że nie ma zastosowania dla uranu.</string>
    <string name="opis_rudy_wengla">Ruda (węgiel) wydobywa się na całej powierzchni Księżyca lub asteroid za pomocą Wiertła Górniczego.</string>
    <string name="zastosowanie_rudy_wengla">Węgiel może być wykorzystywany jako paliwo o niskim poziomie do wytwarzania energii w Generatorze na paliwo stałe. Węgiel można połączyć z rudą żelaza w piecu, aby utworzyć stalową sztabkię. Używanie węgla jako paliwa nie jest najlepszym pomysłem, ponieważ generuje zanieczyszczenia, które mogą być szkodliwe dla zdrowia Gracza, nawet jeśli zapewnia on dobry wzrost mocy. Można go również umieścić w procesorze odczynników, aby zrobić proszek węglowy, element potrzebny do czarnej farby w sprayu.</string>
    <string name="opis_rudy_zelaza">Ruda żelaza jest wydobywana na całej powierzchni Księżyca za pomocą Wiertła Górniczego. Ruda żelaza jest najbardziej podstawowym typem rudy w Stationeers i najczęściej używanym.</string>
    <string name="zastosowanie_rudy_zelaza">Rudę żelaza można przekształcić w sztabkę żelaza poprzez wytapianie jej w piecu łukowym lub piecu. Można go wytopić w stalową szpulę za pomocą węgla i rudy żelaza w piecu , który ma tlen i gaz z lodu (substancje lotne).</string>
    <string name="efekt_rudy_zelaza">Wytapianie jednej rudy żelaza powoduje powstanie następujących gazów:</string>
    <string name="efekt_rudy_zelaza_1">2 mol Zanieczyszczenie</string>
    <string name="efekt_rudy_zelaza_2">0,5 mol Dwutlenek węgla</string>
    <string name="opis_rudy_zlota">Rudę złota wydobywa się na całej powierzchni Księżyca za pomocą Wiertła górniczego.</string>
    <string name="zastosowanie_rudy_zlota">Ruda złota może zostać przekształcona w Złoto w sztabkach poprzez wytopienie jej w piecu lub w piecu łukowym. Ruda złota może być również łączona z równymi ilościami Rudy Srebra w Piecu w celu stworzenia Elektronarzędzi.</string>
    <string name="efekty_rudy_zlota">Wytapianie jednej Rudy Złota wytwarza następujące gazy:</string>
    <string name="efekty_rudy_zlota_1">2 mol Zanieczyszczenie</string>
    <string name="efekty_rudy_zlota_2">0,5 mol azotu</string>
    <string name="efekty_rudy_zlota_3">0,2 mol Dwutlenek węgla</string>
    <string name="efekty_rudy_zlota_4">0,2 mol tlenu</string>
    <string name="wruc"><![CDATA[<<]]></string>
    <string name="automated_temperature_regulation">Automated Temperature Regulation</string>
    <string name="author_jaffa">Author: Jaffa</string>
    <string name="this_logic_will_allow_you_to_automatically_keep_your_atmos_temperature_within_a_minimum_and_maximum_temperature_without_annoying_clicking_this_setup_assumes_that_your_wall_coolers_and_wall_heaters_are_on_a_separate_network_for_the_room_you_want_to_control_the_temperature_of_this_also_assumes_your_atmosphere_isn_t_highly_flammable_network_separation_can_be_obtained_through_a_transformer_or_area_power_controller">This logic will allow you to automatically keep your atmos temperature within a minimum and maximum temperature without annoying clicking. This setup assumes that your Wall Coolers and Wall Heaters are on a separate network for the room you want to control the temperature of. This also assumes your atmosphere isn\'t highly flammable. Network separation can be obtained through a Transformer or Area Power Controller.</string>
    <string name="resources">Resources:</string>
    <string name="_1_gas_sensor">1 Gas Sensor</string>
    <string name="_3_kit_logic_i_o">3 Kit (Logic I/O)</string>
    <string name="_4_kit_logic_processor">4 Kit (Logic Processor)</string>
    <string name="_3_kit_logic_memory">3 Kit (Logic Memory)</string>
    <string name="at_least_1_wall_heater">At least 1 Wall Heater</string>
    <string name="at_least_1_wall_coolerview">At least 1 Wall CoolerView</string>
    <string name="many_cable_coils">Many Cable coils</string>
    <string name="steps_to_placing_the_setup">Steps to placing the setup</string>
    <string name="_1_place_the_gas_sensor_in_the_middle_of_the_room_you_want_to_control">1. Place the Gas Sensor in the middle of the room you want to control</string>
    <string name="_2_place_the_wall_heaters_along_a_wall_of_the_room">2. Place the Wall Heaters along a wall of the room</string>
    <string name="_3_place_the_wall_coolers_along_a_wall_of_the_room">3. Place the Wall Coolers along a wall of the room</string>
    <string name="_4_place_1_kit_logic_i_o_logic_reader_variant">4. Place 1 Kit (Logic I/O) \'Logic Reader\' variant</string>
    <string name="_5_label_the_logic_reader_as_temp_reader">5. Label the logic reader as Temp Reader</string>
    <string name="_6_place_1_kit_logic_processor_logic_select_variant_for_cooling_label_this_quot_cooling_select_quot">6. Place 1 Kit (Logic Processor) \'Logic Select\' variant for cooling Label this: \"Cooling Select\"</string>
    <string name="_7_place_1_kit_logic_processor_logic_compare_variant_for_cooling_label_this_quot_cooling_compare_quot">7. Place 1 Kit (Logic Processor) \'Logic Compare\' variant for cooling Label this: \"Cooling Compare\"</string>
    <string name="_8_place_1_kit_logic_i_o_batch_writer_variant_label_this_quot_cooling_writer_quot">8. Place 1 Kit (Logic I/O) \'Batch Writer\' variant Label this: \"Cooling Writer\"</string>
    <string name="_9_place_1_kit_logic_processor_logic_select_variant_label_this_quot_heating_select_quot">9. Place 1 Kit (Logic Processor) \'Logic Select\' variant Label this: \"Heating Select\"</string>
    <string name="_10_place_1_kit_logic_processor_logic_compare_variant_label_this_quot_heating_compare_quot">10. Place 1 Kit (Logic Processor) \'Logic Compare\' variant Label this: \"Heating Compare\"</string>
    <string name="_11_place_1_kit_logic_i_o_batch_writer_variant_label_this_quot_heating_writer_quot">11. Place 1 Kit (Logic I/O) \'Batch Writer\' variant Label this: \"Heating Writer\"</string>
    <string name="_12_place_all_3_kit_logic_memory_units_nearby_label_these_as_temp_min_temp_mid_and_temp_max_and_set_your_desired_temperatures_in_kelvin">12.Place all 3 Kit (Logic Memory) units nearby Label these as Temp Min, Temp Midand Temp Maxand set your desired temperatures in kelvin</string>
    <string name="_13_wire_all_units_together">13. Wire all units together</string>
    <string name="_14_temp_reader_should_be_set_to_read_temperature_from_your_gas_sensor">14. Temp Readershould be set to read Temperaturefrom your Gas sensor</string>
    <string name="_15_configure_your_cooling_select_select_cooling_compare_input_1_max_temp_input_2_mid_temp">15. Configure your Cooling Select; Select: Cooling CompareInput 1: Max TempInput 2: Mid Temp</string>
    <string name="_16_configure_your_cooling_compare_input_1_temp_reader_mode_greater_input_2_cooling_select">16. Configure your Cooling Compare; Input 1: Temp ReaderMode: Greater Input 2: Cooling Select</string>
    <string name="_17_configure_your_cooling_writer_input_cooling_compare_output_wall_cooler_setting_on">17. Configure your Cooling Writer; Input: Cooling CompareOutput: Wall Cooler Setting: On</string>
    <string name="_18_configure_your_heating_select_select_heating_compare_input_1_min_temp_input_2_mid_temp">18. Configure your Heating Select; Select: Heating CompareInput 1: Min TempInput 2: Mid Temp</string>
    <string name="_19_configure_your_heating_compare_input_1_temp_reader_mode_less_input_2_heating_select">19. Configure your Heating Compare; Input 1: Temp ReaderMode: Less Input 2: Heating Select</string>
    <string name="_20_configure_your_heating_writer_input_heating_compare_output_wall_heater_setting_on">20. Configure your Heating Writer; Input: Heating CompareOutput: Wall Heater Setting: On</string>
    <string name="_21_finally_turn_on_the_logic_chips_in_the_following_order_logic_reader_select_unit_logic_compare_batch_writer">21. Finally, turn on the logic chips in the following order: Logic Reader Select Unit Logic Compare Batch Writer</string>
    <string name="Zastosowanię">Application:</string>
    <string name="Ograniczenia">Limitations</string>
    <string name="Timing_Circuid_Zastosowanie">Jest to schemat / obwód, aby wykonać timer dla innych obwodów. Można na przykład ustawić cykl tak, aby co 10 sekund, a inny obwód mógł użyć tego, aby włączyć sygnał ostrzegawczy przez 2 sekundy co 10 sekund.</string>
    <string name="Timing_Circuit_Limit">W tej dokładnej implementacji, używając równości, jeśli z jakiegoś powodu wartość przekroczy maksymalną wartość, nigdy się nie zresetuje. Uruchomienie trwa 85W.</string>
    <string name="shemat">schemat</string>
</resources>