<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button15"
        android:layout_width="52dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="wrucporadniki"
        android:text="@string/wruc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/automated_temperature_regulation"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/author_jaffa"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView41"
        app:layout_constraintVertical_bias="0.77">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/this_logic_will_allow_you_to_automatically_keep_your_atmos_temperature_within_a_minimum_and_maximum_temperature_without_annoying_clicking_this_setup_assumes_that_your_wall_coolers_and_wall_heaters_are_on_a_separate_network_for_the_room_you_want_to_control_the_temperature_of_this_also_assumes_your_atmosphere_isn_t_highly_flammable_network_separation_can_be_obtained_through_a_transformer_or_area_power_controller"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView41"
                tools:text="This logic will allow you to automatically keep your atmos temperature within a minimum and maximum temperature without annoying clicking. This setup assumes that your Wall Coolers and Wall Heaters are on a separate network for the room you want to control the temperature of. This also assumes your atmosphere isn't highly flammable. Network separation can be obtained through a Transformer or Area Power Controller." />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/resources"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView42" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/_1_gas_sensor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView43" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/_3_kit_logic_i_o"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView44" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/_4_kit_logic_processor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView45" />

            <TextView
                android:id="@+id/textView47"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/_3_kit_logic_memory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView46" />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/at_least_1_wall_heater"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView47" />

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/at_least_1_wall_coolerview" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/many_cable_coils" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/steps_to_placing_the_setup"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1_place_the_gas_sensor_in_the_middle_of_the_room_you_want_to_control"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textView54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2_place_the_wall_heaters_along_a_wall_of_the_room"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_3_place_the_wall_coolers_along_a_wall_of_the_room"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_4_place_1_kit_logic_i_o_logic_reader_variant" />

            <TextView
                android:id="@+id/textView58"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_5_label_the_logic_reader_as_temp_reader" />

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6_place_1_kit_logic_processor_logic_select_variant_for_cooling_label_this_quot_cooling_select_quot" />

            <TextView
                android:id="@+id/textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_7_place_1_kit_logic_processor_logic_compare_variant_for_cooling_label_this_quot_cooling_compare_quot" />

            <TextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_8_place_1_kit_logic_i_o_batch_writer_variant_label_this_quot_cooling_writer_quot" />

            <TextView
                android:id="@+id/textView62"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_9_place_1_kit_logic_processor_logic_select_variant_label_this_quot_heating_select_quot" />

            <TextView
                android:id="@+id/textView63"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_10_place_1_kit_logic_processor_logic_compare_variant_label_this_quot_heating_compare_quot" />

            <TextView
                android:id="@+id/textView64"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_11_place_1_kit_logic_i_o_batch_writer_variant_label_this_quot_heating_writer_quot" />

            <TextView
                android:id="@+id/textView65"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_12_place_all_3_kit_logic_memory_units_nearby_label_these_as_temp_min_temp_mid_and_temp_max_and_set_your_desired_temperatures_in_kelvin" />

            <TextView
                android:id="@+id/textView66"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_13_wire_all_units_together" />

            <TextView
                android:id="@+id/textView67"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_14_temp_reader_should_be_set_to_read_temperature_from_your_gas_sensor" />

            <TextView
                android:id="@+id/textView68"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_15_configure_your_cooling_select_select_cooling_compare_input_1_max_temp_input_2_mid_temp" />

            <TextView
                android:id="@+id/textView69"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_16_configure_your_cooling_compare_input_1_temp_reader_mode_greater_input_2_cooling_select" />

            <TextView
                android:id="@+id/textView70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_17_configure_your_cooling_writer_input_cooling_compare_output_wall_cooler_setting_on" />

            <TextView
                android:id="@+id/textView71"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_18_configure_your_heating_select_select_heating_compare_input_1_min_temp_input_2_mid_temp" />

            <TextView
                android:id="@+id/textView72"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_19_configure_your_heating_compare_input_1_temp_reader_mode_less_input_2_heating_select" />

            <TextView
                android:id="@+id/textView73"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_20_configure_your_heating_writer_input_heating_compare_output_wall_heater_setting_on" />

            <TextView
                android:id="@+id/textView74"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_21_finally_turn_on_the_logic_chips_in_the_following_order_logic_reader_select_unit_logic_compare_batch_writer" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>